--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,37 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
 
-<div class="container">
-    <h1> Site de Gestion de match de football</h1>
-    <div class="d-flex mt-5">
-        <div class="col-5">
-            <button type="button"  class="btn btn-primary">
-                <a class="link-light" data-th-href="@{championnats}">Liste des championnats</a>
-            </button>
+<!DOCTYPE html>
+<html>
+<title>Log in</title>
+
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+</head>
+
+<body>
+<form action="/logUser" method="post">
+    <h1>Log in</h1>
+
+    <div class="formcontainer">
+        <div class="container">
+            <label for="uname"><strong>Username</strong></label>
+            <input type="text" placeholder="Enter Username" name="uname"  id="uname" required>
+
+            <label for="psw"><strong>Password</strong></label>
+            <input type="password" placeholder="Enter Password" name="psw" id="psw" required autocomplete="current-password">
+
         </div>
-        <div class="col-5">
-            <button type="button" class="btn btn-primary">
-                <a class="link-light" data-th-href="@{equipe/newEquipe}">Création d'une équipe</a>
-            </button>
-        </div>
-        <div class="col-5">
-            <button type="button" class="btn btn-primary">
-                <a class="link-light" data-th-href="@{stade/liste}">Liste des stades</a>
-            </button>
+        <button type="submit"><strong>Log In</strong></button>
+        <div class="d-flex flex-row align-items-center justify-content-between">
+            <a data-th-href="@{/addUser}">Create an account</a>
         </div>
     </div>
-</div>
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <button type="submit">Login</button>
+</form>
 </body>
+
 </html>
