correction des erreurs niveau templates

--- a/src/main/resources/templates/championnatForm.html
+++ b/src/main/resources/templates/championnatForm.html
@@ -98,7 +98,7 @@
                             id="image2"
                             onclick="show2()"
                             style="max-width: 3%; float: right"
-                            src="/img/fleche.png"
+                            src="/static/fleche.png"
                     />
                     </th>
                 </tr>
