--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,36 +1,53 @@
-
 <!DOCTYPE html>
-<html>
-<title>Log in</title>
-
+<html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Log in</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<body><!-- Include the header -->
+<div id="header"></div>
+<script>
+    fetch('header.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('header').innerHTML = data;
+        });
+</script>
 
-<body>
-<form action="/logUser" method="post">
-    <h1>Log in</h1>
-
-    <div class="formcontainer">
-        <div class="container">
+<div class="container mt-5">
+    <form action="/logUser" method="post">
+        <h1 class="mb-4">Log in</h1>
+        <div class="form-group">
             <label for="uname"><strong>Username</strong></label>
-            <input type="text" placeholder="Enter Username" name="uname"  id="uname" required>
-
+            <input type="text" class="form-control" id="uname" placeholder="Enter Username" name="uname" required>
+        </div>
+        <div class="form-group">
             <label for="psw"><strong>Password</strong></label>
-            <input type="password" placeholder="Enter Password" name="psw" id="psw" required autocomplete="current-password">
-
+            <input type="password" class="form-control" id="psw" placeholder="Enter Password" name="psw" required autocomplete="current-password">
         </div>
-        <button type="submit"><strong>Log In</strong></button>
-        <div class="d-flex flex-row align-items-center justify-content-between">
-            <a data-th-href="@{/addUser}">Create an account</a>
-        </div>
+        <button type="submit" class="btn btn-primary"><strong>Log In</strong></button>
+    </form>
+    <div class="mt-3 text-center">
+        <p>Don't have an account? <a href="/addUser">Create an account</a></p>
     </div>
-    <button type="submit">Login</button>
-</form>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
+<!-- Include Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+<!-- Include the footer -->
+<div id="footer"></div>
+<script>
+    fetch('footer.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('footer').innerHTML = data;
+        });
+</script>
 </html>
