--- a/src/main/resources/templates/indexClassement.html
+++ b/src/main/resources/templates/indexClassement.html
@@ -2,72 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-            crossorigin="anonymous"
-    />
-
     <title>Résultats</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
 </head>
 <body>
+<!-- Include the header -->
+<div id="header"></div>
+<script>
+    fetch('header.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('header').innerHTML = data;
+        });
+</script>
+
 <div class="container">
-    <div class="vertical-center">
-        <table
-                class="table table-borderless"
-                style="background-color: rgb(134, 205, 233)"
-        >
-            <div class="titre" data-th-text="${championnat.nom}">Classement ligue 1 Uber Eats 2022-2023</div>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col">pts</th>
-                    <th scope="col">J.</th>
-                    <th scope="col">G.</th>
-                    <th scope="col">N.</th>
-                    <th scope="col">P.</th>
-                    <th scope="col">p.</th>
-                    <th scope="col">c.</th>
-                    <th scope="col">+/-</th>
-                    <th scope="col">
-                        <div class="">G.</div>
-                        <div class="">N.</div>
-                        <div class="">P.</div>
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr data-th-each="equipeStats,iter : ${ equipeChampionnat }">
-                    <th scope="row" data-th-text="${iter.index + 1}">1</th>
-                    <td data-th-text="${equipeStats.equipe.nom}">Paris-SG</td>
-                    <!--<td>1^fleche</td>-->
-                    <td></td>
-                    <td data-th-text="${equipeStats.totalPoint}">24</td>
-                    <td data-th-text="${equipeStats.maxJournee}">41</td>
-                    <td data-th-text="${equipeStats.matchGagnee}">42</td>
-                    <td data-th-text="${equipeStats.matchNul}">1</td>
-                    <td data-th-text="${equipeStats.matchPerdu}">37</td>
-                    <td>47</td>
-                    <td>+45</td>
-                    <td>graph</td>
-                </tr>
-                </tbody>
-            </table>
-        </table>
-    </div>
-</div>
+    <h2 class="text-center py-4">Classement Ligue 1 Uber Eats 2022-2023</h2>
+    <table class="table table-bordered table-hover table-striped">
+        <thead class="table-light">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Équipe</th>
+            <th scope="col"></th>
+            <th scope="col">Pts</th>
+            <th scope="col">J.</th>
+            <th scope="col">G.</th>
+            <th scope="col">N.</th>
+            <th scope="col">P.</th>
+            <th scope="col">p.</th>
+            <th scope="col">c.</th>
+            <th scope="col">+/-</th>
+            <th scope="col">G.</th>
+            <th scope="col">N.</th>
+            <th scope="col">P.</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="equipeStats, iter : ${equipeChampionnat}">
+            <td th:text="${iter.index + 1}">1</td>
+            <td th:text="${equipeStats.equipe.nom}">Paris-SG</td>
+            <td></td>
+            <td th:text="${equipeStats.totalPoint}">24</td>
+            <td th:text="${equipeStats.maxJournee}">41</td>
+            <td th:text="${equipeStats.matchGagnee}">42</td>
+            <td th:text="${equipeStats.matchNul}">1</td>
+            <td th:text="${equipeStats.matchPerdu}">37</td>
+            <td>47</td>
+            <td>+45</td>
+            <td>graph</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"
-></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
+
+<!-- Include the footer -->
+<div id="footer"></div>
+<script>
+    fetch('footer.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('footer').innerHTML = data;
+        });
+</script>
 </html>
