--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
         <button type="submit" class="btn btn-primary"><strong>Log In</strong></button>
     </form>
     <div class="mt-3 text-center">
-        <p>Don't have an account? <a href="/addUser">Create an account</a></p>
+        <p>Vous n'avez pas de compte? <a href="/addUser">Créez un compte</a></p>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
