--- a/src/main/resources/templates/indexListRes.html
+++ b/src/main/resources/templates/indexListRes.html
@@ -17,8 +17,10 @@
             document.getElementById('header').innerHTML = data;
         });
 </script>
+<br><br>
 <div class="container">
     <div class="row">
+
         <div class="col-12">
             <h2 class="mb-3"><strong>Liste des championats</strong></h2>
         </div>
@@ -35,14 +37,10 @@
                                 <h5 data-th-text="${championnat.nom}">Coupe du monde</h5>
                             </div>
                             <div class="col-3">
-                                <a data-th-href="@{/championnat/{id}/resultatsListe(id=${championnat.id})}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">liste des matchs</a>
+                                <a href="@{/championnat/{id}/resultatsListe(id=${championnat.id})}" class="btn btn-sm btn-secondary active" role="button" aria-pressed="true">Liste des matchs</a>
                             </div>
-                            <div class="col-4">
-                                <a data-th-href="@{'/details_championnat?idChampionnat=' + ${championnat.id}}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">
-
-                                <span>classement</span>
-
-                                </a>
+                            <div class="col-3">
+                                <a href="@{'/details_championnat?idChampionnat=' + ${championnat.id}}" class="btn btn-sm btn-secondary active" role="button" aria-pressed="true">Classement</a>
                             </div>
                         </div>
                         <div class="bar-thin bg-light mb-2" style="height: 2px;"></div>
