--- a/src/main/resources/templates/listeEquipes.html
+++ b/src/main/resources/templates/listeEquipes.html
@@ -30,7 +30,7 @@
                     <th scope="col">Logo</th>
                     <th scope="col">Nom</th>
                     <th scope="col">Nom Entraîneur</th>
-                    <th scope="col">Statut</th>
+                    <th scope="col">Actions</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -40,15 +40,14 @@
                     </td>
                     <td class="align-middle" data-th-text="${equipe.nom}"></td>
                     <td class="align-middle" data-th-text="${equipe.nomEntrainneur}"></td>
-                    <td class="align-middle" data-th-text="${equipe.status}"></td>
+                    <td class="align-middle">
+                        <a data-th-href="@{'/equipe/' + ${equipe.id} + '/detail'}" class="btn btn-primary btn-sm me-2">Détails</a>
+                        <a href="#" class="btn btn-danger btn-sm">Supprimer</a>
+                    </td>
+
                 </tr>
                 </tbody>
             </table>
-            <div>
-                <a data-th-href="@{/championnat/newChampionnat}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">
-                    <span>Ajouter un championnat</span>
-                </a>
-            </div>
         </div>
     </div>
 </div>
